force-app/main/default/objects/Exco__c/Exco__c.object-meta.xml
<CustomObject>
    <description>Object to store the Exco codes for loyalty</description>
    <label>Exco</label>
    <nameField>
        <displayFormat>Ex-{00000000}</displayFormat>
        <label>Exco ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Excos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>