force-app/main/default/objects/Exco__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account associated to this EXCO</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Excos</relationshipLabel>
    <relationshipName>Excos</relationshipName>
    <type>Lookup</type>
</CustomField>