force-app/main/default/objects/Exco__c/fields/Contract_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Contract_Agreement__c</fullName>
    <description>Relationship back to Contract</description>
    <inlineHelpText>Contract associated to this EXCO</inlineHelpText>
    <label>Contract &amp; Agreement</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Excos</relationshipLabel>
    <relationshipName>Excos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>