force-app/main/default/objects/Exco__c/fields/Partner_Code__c.field-meta.xml
<CustomField>
    <fullName>Partner_Code__c</fullName>
    <description>This field stores the Exco partner code.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Partner Code</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>